# 1S2026_LFPA_202303088

Practica1/: DiagramaFlujo.md  InformeDesarrollo.md  ManualTecnico.md  ManualUsuario.md  ReporteAnalisisCarrera.html  ReporteEstadisticasCurso.html  ReporteRendimientoEstudiante.html  ReporteReprobacionCursos.html  cursos.lfp  estudiantes.lfp  main.cpp  notas.lfp  reporte_top10.html
Proyecto1/: .gitignore  CMakeLists.txt  README.md  Reporte1_Historial_Pacientes.html  Reporte2_Carga_Medicos.html  Reporte3_Agenda.html  Reporte4_Estadistico.html  Reporte_MedLexer.html  TablaErroresLexicos.html  errores_lexicos.med  hospital.dot  paciente_basico.med  prueba.med  solo_urgencias.med  test_basico.med
Proyecto1/src/: DataExtractor.cpp  DataExtractor.h  ErrorManager.cpp  ErrorManager.h  Estructuras.h  LexicalAnalyzer.cpp  LexicalAnalyzer.h  MainWindow.cpp  MainWindow.h  ReportGenerator.cpp  ReportGenerator.h  Token.cpp  Token.h
Proyecto2/: CMakeLists.txt  README.md  nuevo.task
Proyecto2/reports/: 1_tablero_kanban.html  2_carga_trabajo.html  3_errores.html  arbol.dot
Proyecto2/src/: DataRemember.h  ErrorManager.cpp  ErrorManager.h  LexicalAnalyzer.cpp  LexicalAnalyzer.h  LexycalAnalyzer.h  MainWindow.cpp  MainWindow.h  ReportGenerator.cpp  ReportGenerator.h  SyntaxAnalyzer.cpp  SyntaxAnalyzer.h  Token.cpp  Token.h
Proyecto2/tests/: prueba.task
Tarea1/: tarea.cpp
Tarea2/: main.cpp
Tarea3/: afd_codigo.dot  afd_entero.dot  main.cpp
